--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
+package.json
+package-lock.json
 
 # testing
 /coverage
@@ -19,6 +21,7 @@
 .env.test.local
 .env.production.local
 .idea
+.prettierignore
 
 npm-debug.log*
 yarn-debug.log*
