--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/course-material
+/exercises-part-1/Exercise 1.11/spring-example-project
