--- a/exercises-part-1/Exercise-1.12/example-frontend/.gitignore
+++ b/exercises-part-1/Exercise-1.12/example-frontend/.gitignore
@@ -4,8 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-package.json
-package-lock.json
 
 # testing
 /coverage
@@ -15,18 +13,14 @@ package-lock.json
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.idea
-.prettierignore
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/course-material
-/exercises-part-1/Exercise 1.11/spring-example-project
-# /exercises-part-1/Exercise 1.12/example-frontend
+# To not accidentally reveal answers. If you're student copying the application you may remove this.
+Dockerfile
