--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,4 @@ yarn-error.log*
 
 /course-material
 /exercises-part-1/Exercise 1.11/spring-example-project
-# /exercises-part-1/Exercise 1.12/example-frontend
+/exercises-part-1/Exercise 1.12/example-frontend
