--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/course-material
-/exercises-part-1/Exercise 1.11/spring-example-project
-/exercises-part-1/Exercise 1.12/example-frontend
+/course-material/*
+/exercises-part-1/Exercise-1.11/spring-example-project
+/exercises-part-1/Exercise-1.12/example-frontend
+/exercises-part-1/Exercise-1.13/example-backend
