Update exercises 1.13 and 1.14

--- a/exercises-part-1/Exercise-1.14/backend/Dockerfile
+++ b/exercises-part-1/Exercise-1.14/backend/Dockerfile
@@ -8,6 +8,6 @@ ENV REQUEST_ORIGIN=http://localhost:5000
 
 COPY . .
 
-RUN go build && test ./...
+RUN go build && go test ./...
 
 CMD ["./server"]
