--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ yarn-error.log*
 /exercises-part-1/Exercise-1.11/spring-example-project
 /exercises-part-1/Exercise-1.12/example-frontend
 /exercises-part-1/Exercise-1.13/example-backend
+/exercises-part-1/Exercise-1.15/pacoder
