--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ yarn-error.log*
 /exercises-part-1/Exercise-1.12/example-frontend
 /exercises-part-1/Exercise-1.13/example-backend
 /exercises-part-1/Exercise-1.15/pacoder
+/exercises-part-2/exercise-2.3/example-backend
+/exercises-part-2/exercise-2.3/example-frontend
