slight update of Dockerfiles of exercise 1.14

--- a/exercises-part-1/Exercise-1.14/backend/Dockerfile
+++ b/exercises-part-1/Exercise-1.14/backend/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /usr/src/app
 
 EXPOSE 8080
 
-ENV REQUEST_ORIGIN=http://localhost:5000
+ENV PORT 8080
+
+ENV REQUEST_ORIGIN http://localhost:5000
 
 COPY . .
 
