--- a/exercises-part-1/Exercise-1.14/frontend/Dockerfile
+++ b/exercises-part-1/Exercise-1.14/frontend/Dockerfile
@@ -4,14 +4,10 @@ WORKDIR /usr/src/app
 
 COPY . .
 
+ENV REACT_APP_BACKEND_URL http://localhost:8080
+
 EXPOSE 5000
 
-RUN npm install
-
-RUN npm run build
-
-RUN npm install -g serve
-
-ENV REACT_APP_BACKEND_URL=http://localhost:8080
+RUN npm install && npm run build && npm install -g serve
 
 CMD ["serve", "-s", "-l", "5000", "build"]
