Update exercise 2.3 and commit exercise 2.4

--- a/exercises-part-2/exercise-2.4/docker-compose.yml
+++ b/exercises-part-2/exercise-2.4/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     ports:
       - 5000:5000
 
-  backend:
+  backend: 
     image: backend
     container_name: backend-container
-    build:
+    build: 
       context: ./example-backend
       dockerfile: Dockerfile
     ports:
@@ -23,5 +23,6 @@ services:
   
   redis:
     image: redis
-    container_name: redis-server
+    container_name: redis-container
     restart: unless-stopped
+    command: redis-server
