--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ yarn-error.log*
 /exercises-part-1/Exercise-1.15/pacoder
 /exercises-part-2/exercise-2.3/example-backend
 /exercises-part-2/exercise-2.3/example-frontend
+/exercises-part-2/exercise-2.5/scaling-exercise
