--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ yarn-error.log*
 /exercises-part-2/exercise-2.3/example-backend
 /exercises-part-2/exercise-2.3/example-frontend
 /exercises-part-2/exercise-2.5/scaling-exercise
+/exercises-part-2/exercise-2.6/example-backend
+/exercises-part-2/exercise-2.6/example-frontend
