--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 /exercises-part-2/exercise-2.5/scaling-exercise
 /exercises-part-2/exercise-2.6/example-backend
 /exercises-part-2/exercise-2.6/example-frontend
+/exercises-part-2/exercise-2.7/frontend
+/exercises-part-2/exercise-2.7/backend
+/exercises-part-2/exercise-2.7/training
+/exercises-part-2/exercise-2.8/example-backend
+/exercises-part-2/exercise-2.8/example-frontend
