--- a/exercises-part-2/exercise-2.8/docker-compose.yml
+++ b/exercises-part-2/exercise-2.8/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       context: ./example-backend
       dockerfile: Dockerfile
     environment:
+      - REQUEST_ORIGIN=http://localhost
       - REDIS_HOST=redis
       - POSTGRES_HOST=postgres
       - POSTGRES_USER=postgres
@@ -42,5 +43,5 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:rw
+      - ./nginx.conf:/etc/nginx/nginx.conf
   
