--- a/exercises-part-2/exercise-2.8/nginx.conf
+++ b/exercises-part-2/exercise-2.8/nginx.conf
@@ -6,11 +6,11 @@ http {
     listen 80;
     
     location / {
-        proxy_pass http://frontend:5000;
+      proxy_pass http://frontend:5000/;
     }
 
     location /api/ {
-        proxy_pass http://backend:8080/;
+      proxy_pass http://backend:8080/;
     }
   }
 }
