--- a/exercises-part-2/exercise-2.10/docker-compose.yml
+++ b/exercises-part-2/exercise-2.10/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       context: ./example-backend
       dockerfile: Dockerfile
     environment:
+      - REQUEST_ORIGIN=http://localhost
       - REDIS_HOST=redis
       - POSTGRES_HOST=postgres
       - POSTGRES_USER=postgres
