--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ yarn-error.log*
 /exercises-part-2/exercise-2.10/example-frontend
 /exercises-part-2/exercise-2.10/database
 /exercises-part-2/exercise-2.10/redis
+/exercises-part-3/exercise-3.1/pacoder
