--- a/exercises-part-3/exercise-3.3/Dockerfile.frontend
+++ b/exercises-part-3/exercise-3.3/Dockerfile.frontend
@@ -4,13 +4,10 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-RUN apt-get update && apt-get install -y curl
-
-RUN curl -sL https://deb.nodesource.com/setup_16.x | bash && apt-get install -y nodejs
-
-RUN npm install && npm run build && npm install -g serve
-
-RUN useradd -m devuser && chown devuser /usr/src/app
+RUN apt-get update && apt-get install -y curl && \
+  curl -sL https://deb.nodesource.com/setup_16.x | bash && apt-get install -y nodejs && \
+  npm install && npm run build && npm install -g serve && \
+  useradd -m devuser && chown devuser /usr/src/app
 
 USER devuser
 
